--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 
     <form id="form-habits">
       <div class="habits">
-        <div class="habit" data-name="run">🏃‍♂️</div>
+        <div class="habit" data-name="gym">🏋️‍♂️</div>
         <div class="habit" data-name="water">💧</div>
-        <div class="habit" data-name="food">🍎</div>
-        <div class="habit" data-name="journal">📒</div>
+        <div class="habit" data-name="shower">🚿</div>
+        <div class="habit" data-name="study">📚</div>
         <div class="habit" data-name="takePills">💊</div>
+        <div class="habit" data-name="skincare">🧼</div>
+        <div class="habit" data-name="read">📕</div>
       </div>
 
       <div class="days"></div>
